--- a/src/app/home/components/courses/course-info/course-info.component.scss
+++ b/src/app/home/components/courses/course-info/course-info.component.scss
@@ -1,6 +1,7 @@
 .dialog-header-close {
     display: flex;
     justify-content: space-between;
+    margin: 8px 16px;
 }
 
 .dialog-header-close h1 {
