--- a/src/app/home/components/courses/course-info/course-info.component.scss
+++ b/src/app/home/components/courses/course-info/course-info.component.scss
@@ -43,8 +43,8 @@ main section ul li {
     font-size: 1.1rem;
 }
 
-@media (max-width: 800px) {
-    main {
-        margin: 20px 0;
-    }
-}
+// @media (max-width: 800px) {
+//     main {
+//         margin: 20px 0;
+//     }
+// }
