--- a/src/app/home/components/nav/nav.component.html
+++ b/src/app/home/components/nav/nav.component.html
@@ -12,7 +12,7 @@
         </ul>
     </div>
     <div class="auth-options">
-        <a routerLink="/home/login" (click)="classToogle()">Iniciar Sesión</a>
+        <a routerLink="/home/login">Iniciar Sesión</a>
     </div>
 </nav>
 
