--- a/src/app/dashboard/components/categories/categories.component.html
+++ b/src/app/dashboard/components/categories/categories.component.html
@@ -20,6 +20,17 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombre</th>
             <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
         </ng-container>
+        <ng-container matColumnDef="activo">
+            <th mat-header-cell *matHeaderCellDef id="acciones">Activo</th>
+          <td mat-cell *matCellDef="let element">
+            <mat-checkbox
+              class="example-margin"
+              color="primary"
+              [checked]="element.activo"
+              (click)="checkActive(ev)">
+              </mat-checkbox>
+            </td>
+        </ng-container>
         <ng-container matColumnDef="codigo">
             <th mat-header-cell *matHeaderCellDef mat-sort-header id="codigo">Codigo</th>
             <td mat-cell *matCellDef="let element">{{ element.codigo }}</td>
