--- a/src/app/dashboard/components/cursos/course-edit/course-edit.component.html
+++ b/src/app/dashboard/components/cursos/course-edit/course-edit.component.html
@@ -16,11 +16,12 @@
           [init]="{
               icons: 'material',
               skin: 'borderless',
-              plugins: ['wordcount', 'lists'],
+              plugins: ['wordcount', 'lists', 'image imagetools', 'media'],
               menubar: false,
               min_height: 350,
               width : '750',
-              toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist'
+              toolbar: 'undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | image | media',
+              media_live_embeds: true
           }"
         ></editor>
         <div class="mat-form-field-subscript-wrapper">
