--- a/src/app/dashboard/components/cursos/cursos.component.html
+++ b/src/app/dashboard/components/cursos/cursos.component.html
@@ -18,7 +18,7 @@
       <td
         mat-cell
         *matCellDef="let element"
-        (click)="goToDetail(element.id)"
+        (click)="goToHome(element.id)"
         matTooltip="Ver detalle del curso"
         class="name">
           {{ element.nombre }}
