--- a/src/app/home/components/courses/course-detail/course-detail.component.scss
+++ b/src/app/home/components/courses/course-detail/course-detail.component.scss
@@ -5,7 +5,7 @@
 main {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 450px 1fr;
+    grid-template-rows: auto 1fr;
     row-gap: 36px;
     justify-items: center;
     width: 100%;
@@ -21,19 +21,21 @@ main {
 
 .introduction-container {
     margin-top: 36px;
-    width: 85%;
+    // padding-left: 36px;
+    // padding-right: 36px;
+    width: 95%;
     border: 1px solid var(--secondary1);
     border-radius: 5px;
     -webkit-box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94);
     box-shadow: 2px 2px 10px #999;
     padding: 16px 32px 32px 32px;
     display: grid;
-    grid-template-columns: 0.7fr 1fr;
+    grid-template-columns: 1fr;
     grid-template-rows: 100px 1fr;
     column-gap: 8px;
     grid-template-areas:
     "title title"
-    "img text";
+    "text text";
     align-items: center;
 }
 
@@ -45,7 +47,7 @@ main {
     font-weight: 600;
     margin: 8px 0 0 8px;
     border-bottom: 3px solid var(--main-color2);
-    width: 50%;
+    width: 80%;
 }
 
 .introduction-container .introduction-title p {
@@ -59,39 +61,28 @@ main {
     margin-left: 8px;
 }
 
-.introduction-container .img-container {
-    grid-area: img;
-    display: flex;
-    justify-content: center;
-    width: 90%;
-}
-
-.introduction-container .img-container img {
-    max-width: 100%;
-    height: fit-content;
-}
-
 .introduction-container .introduction-text {
     grid-area: text;
+    margin: 16px 36px;
 }
 
-.introduction-container .introduction-text p {
-    font-size: 1rem;
-    padding-right: 8px;
+.introduction-container .introduction-text #descripcion {
+    font-size: 1.2rem;
+    width: auto;
 }
 
 .information-container {
     margin-bottom: 36px;
     padding: 16px 0 32px 0;
     display: grid;
-    grid-template-columns: 1.5fr 0.7fr;
-    width: 85%;
+    grid-template-columns: 1fr;
+    width: 95%;
     column-gap: 16px;
     justify-items: start;
 }
 
 .information {
-    width: 95%;
+    //width: 95%;
     padding: 32px;
     border: 1px solid var(--secondary1);
     border-radius: 5px;
@@ -178,26 +169,9 @@ mat-expansion-panel p {
     .introduction-container .introduction-title h1 {
         width: 70%;
     }
-
-    .tutores {
-        max-height: 180px;
-    }
 }
 
 @media (max-width: 980px) {
-
-    main {
-        grid-template-rows: 1fr 1fr;
-    }
-
-    .introduction-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: 100px 1fr 1fr;
-        grid-template-areas:
-        "title"
-        "img"
-        "text";
-    }
 
     .introduction-container .introduction-title h1 {
         width: 80%;
@@ -226,21 +200,24 @@ mat-expansion-panel p {
 
 @media (max-width: 480px) {
 
-    .introduction-container {
-        grid-template-columns: 1fr;
-        grid-template-rows: 150px 250px 1fr;
-        grid-template-areas:
-        "title"
-        "img"
-        "text";
-    }
-
     .information {
         padding: 16px;
     }
 
     .information h2 {
         width: 90%;
+    }
+
+    .introduction-container .introduction-text {
+        margin: 8px 0;
+    }
+
+    .introduction-container .introduction-text #descripcion {
+        font-size: 1rem;
+    }
+
+    #descripcion img {
+        width: 20% !important;
     }
 
     mat-panel-title h3 {
