--- a/src/app/dashboard/components/lessons/lecciones/lecciones.component.html
+++ b/src/app/dashboard/components/lessons/lecciones/lecciones.component.html
@@ -1,4 +1,75 @@
-<p>lecciones works!</p>
+<div class="container">
+  <h2>Gestión de Cursos</h2>
+  <mat-form-field appearance="legacy" class="search">
+      <mat-label>Buscar</mat-label>
+      <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Placeholder">
+      <mat-icon matSuffix>search</mat-icon>
+      <mat-hint>puede buscar por cualquier campo</mat-hint>
+  </mat-form-field>
+  <button
+    mat-raised-button
+    (click)="createLesson()"
+    style="background: var(--main-color2); color: white;">
+        Crear nuevo
+</button>
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-<button (click)="createLesson()">Crear nueva Lección</button>
-{{course.nombre}}
+    <!-- nombre del curso -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header id="nombre">Nombre</th>
+      <td
+        mat-cell
+        *matCellDef="let element"
+        (click)="goToHome(element.id)"
+        matTooltip="Ver detalle del curso"
+        class="name">
+          {{ element.posicion + '. ' + element.nombre }}
+      </td>
+    </ng-container>
+
+    <!-- botones de acción -->
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
+      <td mat-cell *matCellDef="let element">
+        <button
+          mat-stroked-button
+          color="primary"
+          matTooltip="Configurar descripción general"
+          (click)="openDialog(element)">
+          <mat-icon style="color: darkgreen;">grid_on</mat-icon>
+        </button>
+        <button
+          mat-stroked-button
+          color="primary"
+          matTooltip="Editar curso"
+          (click)="goToEdit(element)">
+          <mat-icon style="color: darkgoldenrod;">edit</mat-icon>
+        </button>
+        <button
+          mat-stroked-button
+          color="primary"
+          matTooltip="Ver curso"
+          (click)="goToDetail(element.id)">
+          <mat-icon style="color: black;">info</mat-icon>
+        </button>
+        <button mat-stroked-button color="secondary" (click)="deleteUser(element)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+
+    <mat-paginator
+      [pageSizeOptions]="[10, 15, 20]"
+      showFirstLastButtons
+    ></mat-paginator>
+    <button
+      mat-stroked-button
+      color="primary"
+      routerLink="/dashboard/categorias"
+      style="background: var(--main-color2); color: white;">
+      Categorias de Cursos >>
+    </button>
+</div>
