--- a/src/app/dashboard/components/cursos/cursos.component.html
+++ b/src/app/dashboard/components/cursos/cursos.component.html
@@ -34,7 +34,7 @@
     <!-- botones de acción -->
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef id="acciones">Acciones</th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element" class="buttons">
         <button
           mat-stroked-button
           color="primary"
