--- a/src/app/dashboard/components/lessons/lesson-config/lesson-config.component.scss
+++ b/src/app/dashboard/components/lessons/lesson-config/lesson-config.component.scss
@@ -6,14 +6,28 @@ main {
     background: white;
     box-shadow: 0px 2px 1px -1px rgb(0 0 0 / 20%), 0px 1px 1px 0px rgb(0 0 0 / 14%), 0px 1px 3px 0px rgb(0 0 0 / 12%);
     border-radius: 4px;
-    margin: 0 auto;
-    padding-bottom: 16px;
-    width: 400px;
+    margin: 36px auto;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+form {
+    min-width: 80%;
+    display: flex;
+    flex-direction: column;
+}
+
+form h1 {
+    margin: 24px;
+    justify-self: center;
+    align-self: center;
+    text-transform: capitalize;
 }
 
 .title {
     display: flex;
-    justify-content: space-between;
     //background: #37474f;
     //background: #3f51b5;
     background: var(--main-color2);
@@ -31,40 +45,24 @@ main {
     margin: 0 16px;
 }
 
-mat-dialog-content {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 24px 0;
-}
-
-mat-dialog-content form {
-    width: 100%;
+.form-inputs {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: stretch;
-}
-
-mat-dialog-content form .form-inputs {
     align-self: center;
-    width: 300px;
-}
-
-mat-form-field {
-    width: 300px;
+    width: 60%;
+    margin-bottom: 24px;
 }
 
 .buttons {
-    margin-top: 16px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 16px;
+    align-self: center;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin: 16px;
 }
 
-.buttons .guardarBtn {
+.buttons button {
+    margin-right: 16px;
     background: var(--main-color2);
     color: white;
 }
-
