--- a/src/app/home/components/auth/login/login.component.html
+++ b/src/app/home/components/auth/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="main-container">
+Hola soy oliver
     <div class="login-container">
         <div class="login" id="login">
             <form
