--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -43,6 +43,12 @@
             </button>
             <a mat-list-item routerLink="/dashboard/cursos">Cursos</a>
           </mat-list-item>
+          <mat-list-item>
+            <button mat-icon-button>
+              <mat-icon>volume_up</mat-icon>
+            </button>
+            <a mat-list-item routerLink="ads/ads-list">Anuncios</a>
+          </mat-list-item>
         </mat-list>
       </mat-expansion-panel>
       <mat-expansion-panel (opened)="panelOpenState = true"
